--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -9,9 +9,8 @@
                     </a>
                 </div>
                 
-                <!-- Userbar -->
-                
-                
+                <app-userbar></app-userbar>
+
             </div>
         </div>
     </div>
