--- a/src/app/shared/courselist/courseitem/courseitem.html
+++ b/src/app/shared/courselist/courseitem/courseitem.html
@@ -21,6 +21,6 @@
             </p>
         </div>
     </div>
-    <app-buttonset (deleteCourse)="onDeleteCourse()"></app-buttonset>
+    <app-buttonset (deleteCourse)="onDeleteCourse()" (EditCourse)="onEditCourse()"></app-buttonset>
 </div>
 
