--- a/src/app/shared/buttonset/edit_button/edit_button.html
+++ b/src/app/shared/buttonset/edit_button/edit_button.html
@@ -1,4 +1,4 @@
-<button type="button" class="edit_course" (click)="onEditClick()">
+<button type="button" class="edit_course" (click)="onEditCourse()">
     <span><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
     <span>Edit course</span>
 </button>
