lesson 5 created directive and created functional of search

--- a/src/app/shared/courselist/courseitem/courseitem.html
+++ b/src/app/shared/courselist/courseitem/courseitem.html
@@ -19,6 +19,18 @@
             <p>
                 {{courseItem.desc}}
             </p>
+
+            <div [ngSwitch]="courseItem.desc">
+                <template [ngSwitchCase]="courseItem.desc">
+                    awesome
+                </template>
+                <template [ngSwitchCase]="lorem2">
+                    awesome2
+                </template>
+                <template ngSwitchDefault>
+                    Def_awesome
+                </template>
+            </div>
         </div>
     </div>
     <app-buttonset (deleteCourse)="onDeleteCourse()" (EditCourse)="onEditCourse()"></app-buttonset>
